# PCLFeature

./: CMakeLists.txt  PCLFeature.cpp  test.txt
Narf_feature/: CMakeCache.txt  CMakeLists.txt~  Makefile  PCLFeature  PCLFeature.cpp  PCLFeature.cpp~  cmake_install.cmake  narf_feature_extraction  narf_feature_extraction.cpp  test.pcd  test_far.txt  test_far_ranges.pcd  test_pcd_far_ranges.pcd
PFHFeatures/: CMakeCache.txt  CMakeLists.txt~  Makefile  PFH  PFH.cpp  PFH.cpp~  cmake_install.cmake  debug.pcd  normal.pcd  test.txt
VFH/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  VFH  VFH.cpp  VFH.cpp~  VFH.pcd  cmake_install.cmake
depthToRangeImage/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  Makefile~  cmake_install.cmake  convert2Range  convert2Range.cpp  convert2Range.cpp~
rangeImageVis/: CMakeCache.txt  Makefile  cmake_install.cmake  converted.pcd  range_image_visualization  range_image_visualization.cpp
